add nextauth route

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aws-sdk": "^2.1691.0",
     "dotenv": "^16.4.5",
     "next": "14.2.13",
+    "next-auth": "^4.24.8",
     "next-s3-upload": "^0.3.4",
     "quill": "^2.0.2",
     "react": "^18",
