--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "aws-sdk": "^2.1691.0",
     "next": "14.2.13",
     "quill": "^2.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@radix-ui/react-switch": "^1.1.0",
