--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.670.0",
+    "@aws-sdk/client-dynamodb": "^3.674.0",
     "@aws-sdk/client-lex-runtime-v2": "^3.670.0",
     "@aws-sdk/client-s3": "^3.670.0",
-    "@aws-sdk/lib-dynamodb": "^3.670.0",
+    "@aws-sdk/lib-dynamodb": "^3.674.0",
     "aws-sdk": "^2.1691.0",
     "dotenv": "^16.4.5",
-    "next": "14.2.13",
+    "next": "^14.2.13",
     "next-auth": "^4.24.8",
     "next-s3-upload": "^0.3.4",
     "quill": "^2.0.2",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
