--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node", // changed
+    "typeRoots": ["./types", "./node_modules/@types"],
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
