--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@aws-sdk/client-lex-runtime-v2": "^3.670.0",
     "@aws-sdk/client-s3": "^3.670.0",
     "@aws-sdk/lib-dynamodb": "^3.670.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "aws-sdk": "^2.1691.0",
     "dotenv": "^16.4.5",
     "next": "14.2.13",
