--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "@aws-sdk/client-lex-runtime-v2": "^3.670.0",
     "@aws-sdk/client-s3": "^3.670.0",
     "@aws-sdk/lib-dynamodb": "^3.670.0",
+    "@chakra-ui/react": "^2.10.3",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "aws-sdk": "^2.1691.0",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.11.9",
     "next": "14.2.13",
     "next-s3-upload": "^0.3.4",
     "quill": "^2.0.2",
