--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "husky": "^9.1.6",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "postcss": "^8",
     "prettier": "^3.3.3",
