--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0",
     "tailwind-scrollbar-hide": "^1.1.7",
