--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "14.2.13",
     "next-auth": "^4.24.10",
     "next-s3-upload": "^0.3.4",
+    "papaparse": "^5.4.1",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^2.14.305",
     "quill": "^2.0.2",
@@ -51,6 +52,7 @@
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.1",
+    "@types/papaparse": "^5.3.15",
     "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
