--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "@emotion/styled": "^11.13.0",
     "@next/font": "^14.2.15",
     "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-primitive": "^2.0.0",
     "aws-sdk": "^2.1691.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "data-fns": "^1.1.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.9",
+    "lucide-react": "^0.454.0",
     "next": "14.2.13",
     "next-auth": "^4.24.10",
     "next-s3-upload": "^0.3.4",
@@ -39,8 +42,11 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
+    "react-resizable-panels": "^2.1.6",
     "react-router-dom": "^6.27.0",
+    "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss-animate": "^1.0.7",
     "testing-library": "^0.0.2"
   },
   "devDependencies": {
