--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,7 +44,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "components/TextEditor.tsx",
+    "components/DocumentComponents/TextEditor.tsx",
     "src",
     "setupTests.ts"
   ],
