--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-primitive": "^2.0.0",
     "aws-sdk": "^2.1691.0",
+    "canvas": "^2.11.2",
     "data-fns": "^1.1.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
