--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-primitive": "^2.0.0",
     "aws-sdk": "^2.1691.0",
+    "axios": "^1.7.7",
     "data-fns": "^1.1.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
+    "file-saver": "^2.0.5",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.11.9",
     "next": "14.2.13",
     "next-auth": "^4.24.10",
     "next-s3-upload": "^0.3.4",
+    "papaparse": "^5.4.1",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^2.14.305",
     "quill": "^2.0.2",
@@ -39,7 +43,8 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "testing-library": "^0.0.2"
+    "testing-library": "^0.0.2",
+    "turndown": "^7.2.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.0",
@@ -48,11 +53,15 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
+    "@types/file-saver": "^2.0.7",
+    "@types/formidable": "^3.4.5",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.1",
+    "@types/papaparse": "^5.3.15",
     "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/turndown": "^5.0.5",
     "@types/uuid": "^10.0.0",
     "babel-jest": "^29.7.0",
     "eslint": "^8",
