--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@hookform/resolvers": "^3.9.1",
     "@next/font": "^14.2.15",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-primitive": "^2.0.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@shadcn/ui": "^0.0.4",
     "aws-sdk": "^2.1691.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -33,11 +35,13 @@
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.9",
     "lucide-react": "^0.454.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.13",
     "next-auth": "^4.24.10",
     "next-s3-upload": "^0.3.4",
     "papaparse": "^5.4.1",
     "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.8.69",
     "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
@@ -50,6 +54,7 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "testing-library": "^0.0.2",
+    "turndown": "^7.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
