--- a/package.json
+++ b/package.json
@@ -31,17 +31,23 @@
     "file-saver": "^2.0.5",
     "formidable": "^3.5.2",
     "framer-motion": "^11.11.9",
+    "llamaindex": "^0.8.15",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.13",
     "next-auth": "^4.24.10",
+    "next-connect": "^1.0.0",
     "next-s3-upload": "^0.3.4",
     "papaparse": "^5.4.1",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^2.14.305",
     "quill": "^2.0.2",
+    "raw-body": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0",
+    "react-syntax-highlighter": "^15.6.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "testing-library": "^0.0.2",
     "turndown": "^7.2.0"
@@ -56,11 +62,13 @@
     "@types/file-saver": "^2.0.7",
     "@types/formidable": "^3.4.5",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.17.1",
     "@types/papaparse": "^5.3.15",
     "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/turndown": "^5.0.5",
     "@types/uuid": "^10.0.0",
     "babel-jest": "^29.7.0",
