--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "formidable": "^3.5.2",
     "framer-motion": "^11.11.9",
     "lucide-react": "^0.454.0",
+    "motion": "^11.11.17",
     "multer": "^1.4.5-lts.1",
     "next": "14.2.13",
     "next-auth": "^4.24.10",
