--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@aws-sdk/client-s3": "^3.676.0",
     "@aws-sdk/lib-dynamodb": "^3.670.0",
     "@chakra-ui/react": "^2.10.3",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.1",
