--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@shadcn/ui": "^0.0.4",
     "aws-sdk": "^2.1691.0",
-    "canvas": "^2.11.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "data-fns": "^1.1.0",
@@ -48,6 +47,7 @@
     "papaparse": "^5.4.1",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^3.11.174",
+    "posthog-js": "^1.188.0",
     "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
