--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^3.11.174",
     "posthog-js": "^1.188.0",
+    "posthog-node": "^4.2.3",
     "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
