--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-dynamodb": "^3.674.0",
     "@aws-sdk/client-lex-runtime-v2": "^3.670.0",
     "@aws-sdk/client-s3": "^3.676.0",
+    "@aws-sdk/credential-providers": "^3.699.0",
     "@aws-sdk/lib-dynamodb": "^3.670.0",
     "@chakra-ui/react": "^2.10.3",
     "@emotion/react": "^11.13.3",
