--- a/.env
+++ b/.env
@@ -17,3 +17,5 @@ GOOGLE_ID=215160269619-pip2ilpcmr0ieu27lia328n8uritfvgu.apps.googleusercontent.c
 GOOGLE_SECRET=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
 
 DISABLE_AUTH=true
+
+LLAMA_CLOUD_API_KEY=llx-QFfQFKHWqYwtncTR141iDxCEV0T85M4OIKGbb3mV42UGK5Uh
