--- a/.env
+++ b/.env
@@ -19,3 +19,4 @@ GOOGLE_SECRET=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
 DISABLE_AUTH=true
 
 LLAMA_CLOUD_API_KEY=llx-QFfQFKHWqYwtncTR141iDxCEV0T85M4OIKGbb3mV42UGK5Uh
+NEXTAUTH_URL=https://curiocity-pi.vercel.app
