--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "file-saver": "^2.0.5",
     "formidable": "^3.5.2",
     "framer-motion": "^11.11.9",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "motion": "^11.11.17",
     "multer": "^1.4.5-lts.1",
